--- a/app/src/main/res/drawable/content_item_yellow.xml
+++ b/app/src/main/res/drawable/content_item_yellow.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <gradient
         android:endColor="@color/white"
-        android:gradientRadius="150%p"
+        android:gradientRadius="200dp"
         android:startColor="@color/item_yellow"
         android:type="radial" />
 </shape>
